# tagfs-dissertation

./: .gitignore  Cargo.toml  README.adoc
diss/: build.sh
diss/lib/: dissertation.cls
diss/src/: abstract.tex  background.tex  conclusion.tex  dedication.tex  dissertation.bib  dissertation.tex  ethics.tex  evaluation.tex  introduction.tex  notation-and-acronyms.tex  project-execution.tex  supporting-technologies.tex
src/: cli.rs  tagfs.rs
src/cli/: tests.rs
src/fs/: entries.rs  fs.rs  inode_generator.rs  lib.rs
src/lib/: autotag.rs  cli.rs  db.rs  error.rs  fs.rs  lib.rs
src/lib/db/: edit_repr.rs  query.rs  stored_query.rs  tests.rs
src/lib/db/query/: tests.rs
src/lib/fs/: entries.rs  inode_generator.rs
src/programs/: tagfs.rs
tests/: db_tests.rs  end-to-end-test.sh  fs_tests.rs
util/: populate.sh
