[package]
name = "tagfs"
description = "Tag-based virtual file system backed by SQLite."
authors = ["James Blissett <ce18774@bristol.ac.uk>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "libtagfs"
path = "src/lib/lib.rs"

[[bin]]
name = "tagfs"
path = "src/programs/tagfs.rs"

[dependencies]
anyhow = "1.*"
clap = { version = "4.*", features = ["cargo", "derive"] }
env_logger = { version = "0.*", default-features = false }
fuser = "0.*"
libc = "0.2.*"
log = "0.*"
once_cell = "1.*"
regex = "1.*"
rusqlite = { version = "0.*", features = ["hooks"] }
