[package]
name = "tagfs"
description = "Tag-based virtual file system backed by SQLite."
authors = ["James Blissett <ce18774@bristol.ac.uk>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "libtagfs"
path = "src/lib/lib.rs"

[[bin]]
name = "tagfs"
path = "src/tagfs.rs"

[dependencies]
anyhow = "1.*"
audiotags = { version = "0.4.*", optional = true }
camino = "1.*"
chrono = { version = "0.4.*", optional = true }
clap = { version = "4.*", features = ["cargo", "derive"] }
constcat = { version = "0.3.*", optional = true }
env_logger = { version = "0.*", default-features = false }
fuser = { version = "0.*", default-features = false }
indexmap = "1.*"
kamadak-exif = { version = "0.5.*", optional = true }
libc = "0.2.*"
log = "0.*"
mktemp = "0.*"
once_cell = "1.*"
regex = { version = "1.*", optional = true }
rusqlite = "0.*"
serde_json = { version = "1.*", optional = true }
ureq = { version = "2.*", features = ["json"], optional = true }
walkdir = { version = "2.*", optional = true }

[features]
default = ["autotag"]
autotag = [
    "dep:walkdir", "dep:audiotags", "dep:ureq", "dep:serde_json", "dep:regex",
    "dep:constcat", "dep:kamadak-exif", "dep:chrono",
]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
